# Ascend-mspti

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Third_Party_Open_Source_Software_Notice  version.info  version.txt
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
csrc/activity/: activity_manager.cpp  activity_manager.h
csrc/activity/ascend/: dev_prof_task.cpp  dev_prof_task.h  dev_task_manager.cpp  dev_task_manager.h
csrc/activity/ascend/channel/: basic_convert.h  channel_data.h  channel_pool.cpp  channel_pool.h  channel_pool_manager.cpp  channel_pool_manager.h  channel_reader.cpp  channel_reader.h  soclog_convert.cpp  soclog_convert.h  stars_common.cpp  stars_common.h  tsfw_convert.cpp  tsfw_convert.h
csrc/activity/ascend/entity/: communication_op_desc.h  device_task.h  hccl_op_desc.h  soclog.h
csrc/activity/ascend/parser/: cann_api_parser.cpp  cann_api_parser.h  cann_hash_cache.cpp  cann_hash_cache.h  cann_track_cache.cpp  cann_track_cache.h  communication_calculator.cpp  communication_calculator.h  device_task_calculator.cpp  device_task_calculator.h  hccl_calculator.h  (+9 more)
csrc/callback/: callback_manager.cpp  callback_manager.h
csrc/common/: bound_queue.h  concurrent_map.h  config.h  context_manager.cpp  context_manager.h  function_loader.cpp  function_loader.h  mpsc_queue.h  object_pool.h  plog_manager.h  runtime_utils.cpp  runtime_utils.h  task.h  thread_local.h  thread_pool.cpp  thread_pool.h  utils.cpp  utils.h
csrc/common/inject/: acl_inject.cpp  acl_inject.h  acl_mem_inject.cpp  acl_mem_inject.h  driver_inject.cpp  driver_inject.h  hccl_inject.cpp  hccl_inject.h  hccl_range_mark.cpp  hccl_range_mark.h  inject_base.h  mstx_inject.cpp  mstx_inject.h  plog_inject.cpp  plog_inject.h  profapi_inject.cpp  profapi_inject.h  rt_ffts.h
csrc/include/: mspti.h  mspti_activity.h  mspti_callback.h  mspti_cbid.h  mspti_result.h
docs/zh/: README.md  mspti_install_guide.md  overview.md  quick_start.md  release_notes.md  security_statement.md
docs/zh/c_api/: README.md
docs/zh/design/: MindStudio-Profilier-Tools-Interface特性分析与设计说明书.md  MindStudio26.0.0msPTI特性分析与设计说明书.md
docs/zh/developer_guide/: development_guide.md
docs/zh/getting_started/: mspti_install_guide.md  quick_start.md  samples_guide.md
docs/zh/python_api/: README.md
mspti/: __init__.py  activity_data.py  constant.py  utils.py
mspti/csrc/: CMakeLists.txt  activity_buffer_pool.cpp  activity_buffer_pool.h  init.cpp  mspti_adapter.cpp  mspti_adapter.h
mspti/csrc/stub/: CMakeLists.txt  mspti_stub.cpp
mspti/monitor/: __init__.py  _mspti_c.py  base_monitor.py  communication_monitor.py  hccl_monitor.py  kernel_monitor.py  mstx_monitor.py
samples/: README.md
samples/callback_domain/: CMakeLists.txt  callback_domain.cpp  sample_run.sh
samples/callback_mstx/: CMakeLists.txt  callback_mstx.cpp  sample_run.sh
samples/common/: helper_mspti.h  util_acl.h  util_mspti.h
samples/mspti_activity/: CMakeLists.txt  mspti_activity.cpp  sample_run.sh
samples/mspti_correlation/: CMakeLists.txt  mspti_correlation.cpp  sample_run.sh
samples/mspti_external_correlation/: CMakeLists.txt  mspti_external_correlation.cpp  sample_run.sh
samples/mspti_hccl_activity/: CMakeLists.txt  mspti_hccl_activity.cpp  sample_run.sh
samples/mspti_mstx_activity_domain/: CMakeLists.txt  mspti_mstx_activity_domain.cpp  sample_run.sh
samples/python_monitor/: python_monitor.py  sample_run.sh
samples/python_mstx_monitor/: python_mstx_monitor.py  sample_run.sh
scripts/: build.sh  download_thirdparty.sh  execute_test_case.sh  generate_coverage_cpp.sh  make_run.sh  setup.py  smoke.sh
scripts/run_script/: help.conf  install.sh  main.sh  uninstall.sh  utils.sh
test/: CMakeLists.txt
test/cmake/: depend.cmake
test/cmake/modules/: Findgtest.cmake  Findmockcpp.cmake
test/cmake/opensource/: googletest.cmake  mockcpp.cmake
test/cmake/tools/: gen_cover_report.sh  gen_python_cover_report.py  gen_python_cover_report.sh  gen_vcast_cover_report.py  llt_executor.py  llt_run_and_check.sh  python_llt_run_and_check.sh  template.html  vcast_run_and_check.sh
test/mspti_cpp/st/check_tools/: db_check.py
test/mspti_cpp/st/script/: _cfg.py  test_base.py  test_mspti_communication.py  test_mspti_graph.py  test_mspti_samples.py  test_mspti_test.py
test/mspti_cpp/st/testcase/: l1_test_MsptiActivityAndCallbackBaseCase.sh  l1_test_mspti_communication.sh  l1_test_mspti_graph.sh  l1_test_mspti_samples.sh
test/mspti_cpp/ut/: CMakeLists.txt
test/mspti_cpp/ut/activity/: CMakeLists.txt
test/mspti_cpp/ut/activity/activity_manager_test/: CMakeLists.txt  activity_utest.cpp
test/mspti_cpp/ut/activity/channel_test/: CMakeLists.txt  channel_utest.cpp  convert_utest.cpp
test/mspti_cpp/ut/activity/dev_prof_task_test/: CMakeLists.txt  dev_prof_task_utest.cpp
test/mspti_cpp/ut/activity/dostart_chain/: CMakeLists.txt  callback_dostart_chain.cpp  main.cpp
test/mspti_cpp/ut/activity/mspti_activity_flush_all_test/: CMakeLists.txt  main.cpp  mspti_activity_flush_all_utest.cpp
test/mspti_cpp/ut/activity/parser_test/: CMakeLists.txt  communication_calculator_utest.cpp  device_task_calculator_utest.cpp  hccl_calculator_utest.cpp  hccl_reporter_utest.cpp  parser_utest.cpp
test/mspti_cpp/ut/activity/reporter_test/: CMakeLists.txt  memory_reporter_utest.cpp
test/mspti_cpp/ut/callback/: CMakeLists.txt
test/mspti_cpp/ut/callback/callback_manager_test/: CMakeLists.txt  callback_group_utest.cpp  callback_stop_chain_utest.cpp  callback_utest.cpp
test/mspti_cpp/ut/common/: CMakeLists.txt
test/mspti_cpp/ut/common/context_manager_test/: CMakeLists.txt  context_manager_utest.cpp
test/mspti_cpp/ut/common/function_loader_test/: CMakeLists.txt  function_loader_utest.cpp  stub_so.cpp
test/mspti_cpp/ut/common/utils_test/: CMakeLists.txt  main.cpp  utils_utest.cpp
test/mspti_cpp/ut/stub/csrc/common/: plog_manager.h
test/mspti_cpp/ut/stub/inject/: acl_inject_stub.cpp  driver_inject_stub.cpp  hccl_inject_stub.cpp  profapi_inject_stub.cpp
test/mspti_cpp/ut/whl/: CMakeLists.txt  activity_buffer_pool_utest.cpp  mspti_adapter_utest.cpp
(+76 files in other folders)
